# tournament-manager

./: .gitignore  README.md  Taskfile.yaml  Tiltfile
authentication/: Cargo.toml
authentication/proto/: auth.proto  authentication.proto
authentication/src/: main.rs
authentication/src/models/: account.rs  mod.rs
authentication/src/service/: account.rs  authentication.rs
backend/identity-service/: Cargo.toml  build.rs
backend/identity-service/migrations/: 20251227223027_create_accounts_table.sql  20260103213231_create_table_users.sql  20260103213233_create_table_sessions.sql  20260104002433_alter_table_sessions.sql  20260104130430_create_authorization_tables.sql  20260104134348_insert_default_role.sql  20260104151725_add_column_description_to_permissions.sql
backend/identity-service/proto/: account.proto  authentication.proto  user.proto
backend/identity-service/proto/authorization/: authorization.proto  permission.proto  role.proto  user_role.proto
backend/identity-service/src/: lib.rs  main.rs  proto.rs
backend/identity-service/src/adapter/driven/database/: database.rs  mod.rs
backend/identity-service/src/adapter/driven/database/repository/: authorization_repository.rs  cached_session_repository.rs  mod.rs  permission_repository.rs  repository_error.rs  role_repository.rs  (+2 more)
backend/identity-service/src/adapter/driving/grpc/: authentication_service.rs  authorization_service.rs  mod.rs  permission_service.rs  role_service.rs  user_service.rs
backend/identity-service/src/adapter/driving/http/: authentication_handler.rs  mod.rs
backend/identity-service/src/app/: app.rs
backend/identity-service/src/config/: config.rs
backend/identity-service/src/db/: database.rs  mod.rs
backend/identity-service/src/db/repository/: account_repository.rs  authorization_repository.rs  cached_session_repository.rs  mod.rs  permission_repository.rs  role_repository.rs  session_repository.rs  user_repository.rs
backend/identity-service/src/domain/errors/: service_error.rs
backend/identity-service/src/domain/models/: permission.rs  role.rs  user.rs
backend/identity-service/src/interceptor/: auth_interceptor.rs
backend/identity-service/src/models/: account.rs  mod.rs  permission.rs  role.rs  session.rs  user.rs
backend/identity-service/src/service/: account_service.rs  authentication_service.rs  authorization_service.rs  mod.rs  permission_service.rs  role_service.rs  session_cache_service.rs  user_service.rs
backend/identity-service/src/service/grpc/: authentication_service.rs  authorization_service.rs  permission_service.rs  user_service.rs
backend/identity-service/src/utils/: mod.rs  token.rs
backend/identity-service/tests/: session_cache_service_test.rs
(+221 files in other folders)
