[package]
name = "authentication"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
tonic = "0.14.2"
prost = "0.14.1"
tonic-prost = "*"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.225", features = ["derive"] }

[build-dependencies]
tonic-prost-build = "*"