[package]
name = "identity-service"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
tonic = "0.14.2"
prost = "0.14.1"
tonic-prost = "*"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.225", features = ["derive"] }
uuid = { version = "1.19.0", features = ["serde", "v4"] }
chrono = "0.4.42"
argon2 = "0.5.3"
rand_core = "0.9.3"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }

[build-dependencies]
tonic-prost-build = "*"