[package]
name = "identity-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7.5"
tower-http = { version = "0.5.2", features = ["trace", "cors"] }
serde_json = "1.0.138"
axum-extra = { version = "0.9.6", features = ["typed-header"] }
tonic = { version = "0.14.2", features = ["transport"] }
prost = "0.14.1"
tonic-prost = "*"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread", "signal", "full"] }
serde = { version = "1.0.225", features = ["derive"] }
uuid = { version = "1.19.0", features = ["serde", "v7"] }
chrono = { version = "0.4.42", features = ["serde"] }
argon2 = "0.5.3"
rand_core = "0.9.3"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
prost-types = "0.14.1"
tonic-async-interceptor = "0.14.1"
dotenvy = "0.15"
tokio-util = "0.7.16"
tracing = "0.1.41"
mockall = "0.14.0"

[build-dependencies]
tonic-prost-build = "*"

[dev-dependencies]
